--- a/SLI-Interpreter/public_html/index.html
+++ b/SLI-Interpreter/public_html/index.html
@@ -13,7 +13,9 @@
                 <tr>
                     <td>
                         <textarea id="codigo" rows="50" cols="80">
-( intero n fat i )
+#prog01.sli - fatorial simples
+
+( intero n fat i )      #declarando variaveis inteiras
 ( stampa "Entre n: " )
 ( entrare n )
 ( = fat 1 )
@@ -24,6 +26,14 @@
 )
 ( stampa ( . "Fat= " fat ) )
 
+#teste de comando condicional
+( si ( && ( > fat i ) ( > i 1 ) )
+    (
+        ( = n -35.40 )
+        ( = i 200.0 )
+    )
+    ( = i -400 )
+)
                         </textarea>
                     </td>
                     <td>
