--- a/SLI-Interpreter/public_html/index.html
+++ b/SLI-Interpreter/public_html/index.html
@@ -37,7 +37,7 @@
                         </textarea>
                     </td>
                     <td>
-                        <textarea id="saida" rows="50" cols="80" >
+                        <textarea style="background-color: black; color: white" id="saida" rows="50" cols="80" >
                         </textarea>
                     </td>
                 </tr>
