--- a/SLI-Interpreter/public_html/index.html
+++ b/SLI-Interpreter/public_html/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>SLI - Interpreter</title>
-        <link rel="icon" href="sli.png" />
+        <link rel="icon" href="img\sli.png" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="main.js"></script>
+        <link rel="stylesheet" href="css\estilos.css" />
+        <script src="js\main.js"></script>
     </head>
     <body>
         <div>
@@ -37,7 +38,7 @@
                         </textarea>
                     </td>
                     <td>
-                        <textarea style="background-color: black; color: white" id="saida" rows="50" cols="80" >
+                        <textarea id="saida" rows="50" cols="80" >
                         </textarea>
                     </td>
                 </tr>
